--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,10 @@
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center"><font color="#0099CC">&quot;enigmagold&quot; and &quot;enigmasilver&quot; 
-international crypto currency 2017</font></p>
+international crypto currency <br>
+<br>
+<br>
+Developed by Klass Tasarım Bilişim ve İnternet Hizmetleri 2017</font></p>
 
 </body>
 
